@@ -66,6 +66,7 @@ class TodoyuHookManager {
 		$returnValues	= array();
 
 		foreach($hookFuncRefs as $hookFuncRef) {
+			TodoyuLogger::logDebug('Hook: ' . $hookFuncRef);
 			$returnValues[] = TodoyuFunction::callUserFunctionArray($hookFuncRef, $params);
 		}
 
@@ -90,6 +91,7 @@ class TodoyuHookManager {
 		array_unshift($hookParams, $dataVar);
 
 		foreach($hookFuncRefs as $hookFuncRef) {
+			TodoyuLogger::logDebug('Hook: ' . $hookFuncRef);
 			$hookParams[0] = TodoyuFunction::callUserFunctionArray($hookFuncRef, $hookParams);
 		}
 
